--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm a tool!</h1>
-				<p>I'm best known as the newest Tatooine-based Jedi in <em>Star Wars</em> I have magical powers. <a href="/about">Find out more here</a>.</p>
+				<p>I'm best known as the newest Tatooine-based Jedi in <em>Star Wars</em>. I have magical powers. <a href="/about">Find out more here</a>.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
